# ListenToWikipedia

./: .editorconfig  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  DspFaust.cpp  Marimba.cpp  MarimbaVoice.h  NylonGuitar.cpp  NylonGuitarVoice.h  OboeAudioPlayer.cpp  OboeAudioPlayer.h  SimpleOboePlayer.cpp  SimpleOboePlayer.h  StandardBell.cpp  native-lib.cpp  synth.cpp
app/src/main/faust/: README.md  djembe.dsp  marimba.dsp  marimba_model.dsp  nylon_guitar_model.dsp  synth.dsp
app/src/main/faust/Marimba/: README.md
app/src/main/faust/bellModels/: README.md  lpm.lib
app/src/main/faust/bellModels/englishBell/: compile  englishBell.dsp  englishBell.html  modalModel.lib
app/src/main/faust/bellModels/frenchBell/: compile  frenchBell.dsp  frenchBell.html  modalModel.lib
app/src/main/faust/bellModels/germanBell/: compile  germanBell.dsp  germanBell.html  modalModel.lib
app/src/main/faust/bellModels/rossingCarillon/: carillonBell.dsp  compile
app/src/main/faust/bellModels/rossingChurch/: churchBell.dsp  churchBell.html  compile  modalModel.lib
app/src/main/faust/bellModels/russianBell/: compile  modalModel.lib  (+2 more)
app/src/main/faust/cpp/: DspFaust.cpp
app/src/main/res/layout/: app_bar_main.xml  content_main.xml  fragment_recent_changes.xml  item_recent_changes.xml
app/src/main/res/layout-w1240dp/: app_bar_main.xml
app/src/main/res/layout-w600dp/: app_bar_main.xml  fragment_recent_changes.xml  item_recent_changes.xml
app/src/main/res/menu/: bottom_navigation.xml  navigation_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+45 files in other folders)
